--- a/server/views/index.html
+++ b/server/views/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
     </head>
     <body ng-app="App">
-		<div class='container-fluid'>
+		<div class='container'>
 			<nav class="navbar navbar-default" role="navigation">
 				<div class="container-fluid">
 					<div class="navbar-header">
