--- a/public/partials/TaxesData/tax-carro.html
+++ b/public/partials/TaxesData/tax-carro.html
@@ -7,7 +7,7 @@
         </div>
         
         <div class='col-md-2'>
-            <p ng-show="taxForm.matricula.$invalid && !taxForm.morada.$pristine" class="row help-block">Matricula obrigatória.</p>
+            <p ng-show="taxForm.matricula.$invalid && !taxForm.morada.$pristine" class="help-block">Matricula obrigatória.</p>
         </div>
     </div>
 </div>
@@ -21,7 +21,7 @@
         </div>
         
         <div class='col-md-2'>
-            <p ng-show="taxForm.valor.$invalid && !taxForm.valor.$pristine" class="row help-block">Valor obrigatório.</p>
+            <p ng-show="taxForm.valor.$invalid && !taxForm.valor.$pristine" class="help-block">Valor obrigatório.</p>
         </div>
     </div>
 </div>
