--- a/public/partials/TaxesData/tax-pessoa.html
+++ b/public/partials/TaxesData/tax-pessoa.html
@@ -1,26 +1,31 @@
 <div class='row'>
     <!-- NAME -->
-    <div class="form-group" ng-class="{ 'has-error' : taxForm.name.$invalid && !taxForm.name.$pristine }">
-        <div class='col-md-4'>
-            <label>Nome</label>
-            <input type="text" name="name" class="form-control" ng-model="user.name" required novalidate/>
-        </div>
-        <div class='col-md-2'>
-            <p ng-show="taxForm.name.$invalid && !taxForm.name.$pristine" class="row help-block">Campo obrigatório.</p>
-        </div>
+    <div class="form-group" ng-class="{ 'has-error' : userNameForm.name.$invalid && !userNameForm.name.$pristine }">
+        <ng-form name="userNameForm">
+            <div class='col-md-4'>
+                <label for="userName" class='col-md-2 control-label'>Nome</label>
+                <input type="text" id="userName" placeholder="Nome Contribuinte" name="name" class="form-control col-md-offset-1" ng-model="user.name" required novalidate/>
+            </div>
+            <div class='col-md-2'>
+                <span ng-show="userNameForm.name.$invalid && !userNameForm.name.$pristine" class="help-block">Campo obrigatório.</span>
+            </div>
+        </ng-form>
     </div>
 </div>
 
+
 <div class='row'>
     <!-- TELEFONE -->
-    <div class="form-group" ng-class="{ 'has-error' : taxForm.telefone.$invalid && !taxForm.telefone.$pristine }">
-        <div class='col-md-4'>
-            <label>Telefone</label>
-            <input type="text" name="telefone" class="form-control" ng-model="user.telefone" ui-validate="'validateTelefone($value)'" novalidate/>
-        </div>
-        <div class='col-md-2'>
-            <p ng-show="taxForm.telefone.$invalid && !taxForm.telefone.$pristine" class="row help-block">Introduza um telefone válido.</p>
-        </div>
+    <div class="form-group" ng-class="{ 'has-error' : userEmailForm.telefone.$invalid && !userEmailForm.telefone.$pristine }">
+        <ng-form name="userEmailForm">
+            <div class='col-md-4'>
+                <label for="userTelefone" class='col-md-2 control-label'>Telefone</label>
+                <input type="text" id="userTelefone" placeholder="Telefone do Contribuinte" name="telefone" class="form-control col-md-offset-1" ng-model="user.telefone" ui-validate="'validateTelefone($value)'" novalidate/>
+            </div>
+            <div class='col-md-2'>
+                <p ng-show="userEmailForm.telefone.$invalid && !userEmailForm.telefone.$pristine" class="help-block">Introduza um telefone válido.</p>
+            </div>
+        </ng-form>
     </div>
 </div>
         
