--- a/public/partials/TaxesData/tax-casa.html
+++ b/public/partials/TaxesData/tax-casa.html
@@ -7,7 +7,7 @@
         </div>
         
         <div class='col-md-2'>
-            <p ng-show="taxForm.morada.$invalid && !taxForm.morada.$pristine" class="row help-block">Morada obrigatória.</p>
+            <p ng-show="taxForm.morada.$invalid && !taxForm.morada.$pristine" class="help-block">Morada obrigatória.</p>
         </div>
     </div>
 </div>
